fix width overflow on mobile

--- a/style.css
+++ b/style.css
@@ -197,13 +197,14 @@ h1 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
+    max-width: 100vw;
 }
 
 .label {
     position: relative;
     background-color: var(--background-color);
     padding: calc(var(--padding) * 1px);
-    margin: 0 auto;
     text-align: center;
     font-family: 'Cormorant Unicase', serif;
     color: var(--main-color);
